# PR-Lab

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/inc/: client.hpp
client/src/: client.cpp
client_service/: CMakeLists.txt
dinning_hall/: CMakeLists.txt
dinning_hall/inc/: dinning_hall.hpp
dinning_hall/src/: dinning_hall.cpp
helpers/: order.hpp
kitchen/: CMakeLists.txt
kitchen/inc/: kitchen.hpp
kitchen/src/: kitchen.cpp
message/: CMakeLists.txt
message/inc/: distribution_message.hpp  message.hpp  order_message.hpp
server/: CMakeLists.txt
server/inc/: server.hpp
server/src/: server.cpp
tests/base_test/: CMakeLists.txt
tests/test_clt/: CMakeLists.txt  test_clt.cpp
tests/test_serv/: CMakeLists.txt  test_serv.cpp
