cmake_minimum_required (VERSION 3.9.4)

project (dining_hall CXX)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CLIENT_SERVICE_DIR ${PROJECT_SOURCE_DIR})

set(CLIENT_SERVICE_SRC
	)

# add_library(${PROJECT_NAME} STATIC
# 	${DINING_HALL_SRC}
# 	)

# target_include_directories(${PROJECT_NAME}
# 	)


# add_dependencies()
# target_link_libraries()
